--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
+    "expo-font": "^12.0.10",
     "expo-status-bar": "~1.12.1",
+    "google-fonts": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-navigation": "^5.0.0"
