--- a/app.json
+++ b/app.json
@@ -1,21 +1,16 @@
 {
   "expo": {
     "plugins": [
-    [
-      "expo-font",
-        {
-          "fonts": ["node_modules/@expo-google-fonts/inter/Hanuman-Black.ttf"]
-        }
-      ]
+      "expo-font"
     ],
     "name": "rn_design",
     "slug": "rn_design",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./app/assets/icon.png",
+    "icon": "./app/assets/images/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./app/assets/splash.png",
+      "image": "./app/assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -24,12 +19,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./app/assets/adaptive-icon.png",
+        "foregroundImage": "./app/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./app/assets/favicon.png"
+      "favicon": "./app/assets/images/favicon.png"
     },
     "plugins": [
       "expo-font"
