--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/metro-runtime": "~3.2.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.2.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "expo": "~51.0.28",
-    "expo-font": "~12.0.10",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.7",
+    "expo-font": "~13.0.1",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.1",
+    "glob": "^11.0.0",
     "google-fonts": "^1.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0"
   },
